src/commands/top/snapshots/zizq__commands__top__ui__tests__render_connected_with_server_info.snap
---
source: src/commands/top/ui.rs
assertion_line: 1166
expression: "render_to_string(&app, 60, 10)"
---
  Zizq 0.1.0
● Connected 127.0.0.1:8901
  Server version: 1.0.0, Uptime: 1m5s
  Queue: 0 in-flight, 0 ready, 0 scheduled

  Depth[                                           0 jobs]

   In-Flight   Ready   Scheduled
                         ID   PRIORITY QUEUE              DU
 Tab Change Tab  i Info  p Pause  D Delete  q Quit
