src/commands/top/snapshots/zizq__commands__top__ui__tests__render_disconnected.snap
---
source: src/commands/top/ui.rs
assertion_line: 1096
expression: "render_to_string(&app, 60, 10)"
---
  Zizq 0.1.0
● Disconnected 127.0.0.1:8901





   In-Flight   Ready   Scheduled
                         ID   PRIORITY QUEUE              DU
 Tab Change Tab  i Info  p Pause  q Quit
