src/commands/top/snapshots/zizq__commands__top__ui__tests__render_disconnected_wide.snap
---
source: src/commands/top/ui.rs
assertion_line: 1346
expression: "render_to_string(&app, 120, 8)"
---
  Zizq 0.1.0
● Disconnected 127.0.0.1:8901




   In-Flight   Ready   Scheduled
 Tab Change Tab  i Info  p Pause  q Quit
