src/commands/top/snapshots/zizq__commands__top__ui__tests__render_free_tier_ready_tab_with_cap_message.snap
---
source: src/commands/top/ui.rs
assertion_line: 1395
expression: "render_to_string(&app, 80, 20)"
---
  Zizq 0.1.0
● Connected 127.0.0.1:8901
  Server version: 1.0.0, Uptime: 10s
  Queue: 3 in-flight, 50 ready, 2 scheduled
           ▼
  Depth[│││││││││││││││││││││││││││││││││││││││││││││││││││││││       55 jobs]
           ▲
   In-Flight   Ready   Scheduled
                         ID   PRIORITY QUEUE                 DELAY   ATTEMPTS TY
70a3cc87a1f0890da08e8b3cc86          0 default                  5s          0 se
70a3dd47c2308a1fb09e9c4dd97          5 default                1m2s          2 ch





                     Display is currently capped at 10 jobs.
                   Upgrade to a pro license to see everything.

 Tab Change Tab  i Info  p Pause  q Quit
